--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,16 @@
 {
   "name": "Smart Aquarium",
   "short_name": "Aquarium",
-  "start_url": ".",
+  "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#00ffcc",
+  "background_color": "#ffffff",
+  "theme_color": "#2196f3",
+  "orientation": "portrait",
   "icons": [
     {
-      "src": "icon.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "assets/img/icon.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ]
 }
